Fix accessibility contrast failure

--- a/css/main.css
+++ b/css/main.css
@@ -50,9 +50,9 @@ section {
   flex: 1;
 }
 footer {
-  background-color: #628266;
+  background-color: #465D4A;
   text-align: center;
 }
 footer p {
-  color: #F7F6F2;
+  color: #FFFFFF;
 }
